assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Roboto&display=swap');

*{
  margin: 0;
  padding:0;
}

body{
    font-family: 'Roboto', sans-serif;
    font-weight: 400;
    font-size: 19px;
}

.row{
    margin-left: 0;
    margin-right: 0;
}

.container-fluid{
    padding-left: 0;
}

.col{
    padding-left: 0;
}

/* ******************************************************** Header Section */
/* *********************************************************************** */

/* ********************************* Containers */

.container--nav{
    font-family: 'Oswald', sans-serif;
    font-size: 25px;
    font-weight: bold;
    color: #fff;
    position: fixed;
    z-index: 999;                  /*Credit to: https://stackoverflow.com/questions/23287610/my-fixed-navbar-doesnt-work-properly*/
    background-color: #35798e;  /* Credit to: https://www.geeksforgeeks.org/how-to-change-navigation-bar-color-in-bootstrap/ */   /*Original Colour #316879*/
    border-bottom-style: ridge;
}

/* ********************************* Navbar */

.navbar{
    padding: 0;
}

.navbar-brand{
    padding: 0;
}
.navbar-toggler{
    border-style: none;
}




/* ********************************* Hero Image */

.hero-image-home{
    height: 65vh;
    overflow: hidden;
    background: url('../images/taste.jpg') center center / cover no-repeat fixed; /* 'cover' - Alternative Browser!!???*/
    -webkit-background-size: center center / cover no-repeat fixed;
    -moz-background-size: center center / cover no-repeat fixed;
    -o-background-size: center center / cover no-repeat fixed;
}

.hero-image-itinerary{
    height: 65vh;
    background: url('../images/ardgillan2.png') center center / cover no-repeat fixed; /* 'cover' - Alternative Browser!!???*/
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
}

.hero-image-contact{
    height: 65vh;
    background: url('../images/contact.png') center center / cover no-repeat fixed; /* 'cover' - Alternative Browser!!???*/
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
}


/* ******************************************************** Main Sections */
/* *********************************************************************** */

/* ********************************* Intro Quote Section */

.intro--quote--container{
    max-width: 100vw;
    margin: 0;
    min-height: 19rem;
    max-height: fit-content;
    padding: 20px 0px;
    text-align: center;
    border-top-style: ridge;
    background-color: #fff;
}

.intro--quote {}

.intro--quote h1{
    font-family: 'Oswald', sans-serif;
}





/* ********************************* Package Options Section */

.package--container{
    max-width: 99vw;
    min-height: 31rem;
    max-height: fit-content;
    margin: auto;
    border-bottom-style: ridge;
    background-color: #7FE7DC;
}

.package--options{
    text-align: center;
    color: #000000;
    font-weight: 900;
    margin-top: 20px;
    border: #fff 8px solid;
}

.package--option{
    max-width: 97%;
    text-align: center;
    min-height: fit-content;
    max-height: fit-content;
    border-radius: 22px;
    background-color: #ffffff;
}

.package--option h3{
    margin: 15px;
}

.package--options{
    height: 16vh;    
    background: url('../images/taste.jpg') center center / cover no-repeat fixed; /* 'cover' - Alternative Browser!!???*/
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
}

.package--options h2{
    height: fit-content;
    width: fit-content;
    text-align: center;
    text-transform: uppercase;
    margin: 0 auto;
    /*font-family: 'Oswald', sans-serif;*/
    font-family: 'Roboto', sans-serif;
    font-weight: 700;
    background: rgba(241, 229, 209, 0.5);
}



.package--itin{
    width: 100%;
    height: 200px;
    border-radius: 22px;
    background: url('../images/newgrange-sunrise.png') center center / cover no-repeat; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
}

.package--addon{
    width: 100%;
    height: 200px;
    border-radius: 22px;
    background: url('../images/3arena.jpg') center center / cover no-repeat; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
}


/* ********************************* Testimonials Section */

.testimonial--container{}

.testimonials{
    text-align: center;
    font-weight: bold;
    color: #000000;
    margin-top: 20px;
    margin-bottom: 10px;
}

.testimonials i{
    color: #F47A60;
}

.testimonials{
    text-transform: uppercase;
    /*font-family: 'Oswald', sans-serif;*/
    font-family: 'Roboto', sans-serif;
    font-weight: 700;
}

.testimonial{}

        /* Code snippet from Love Running mini-project */
        /* I have amended the padding, border-color & border-width */
#circle-container{
  width: 300px;
  height: 300px;
  padding: 15px;                /* Reduced from 30px */
  border-style: solid;
  border-color: #7FE7DC;      /* Changed to my colour palette*/
  border-width: 2px;            /* Increased from 1px */
  border-radius: 50%;           /* Added top and bottom margin, was set to 0 */
  margin: 10px auto;
}

#circle-cover-rob{    /* Modified ID name */
  background: url('../images/rob.png') no-repeat center center;
  height: 100%;
  border-radius: 50%;
}
        /* End of Code snippet from Love Running mini-project */

#circle-cover-renate{
  background: url('../images/renate.png') no-repeat center center;
  height: 100%;
  border-radius: 50%;
}       

#circle-cover-hans{
  background: url('../images/hans.png') no-repeat center center;
  height: 100%;
  border-radius: 50%;
}    

#circle-cover-william{
  background: url('../images/william.png') no-repeat center center;
  height: 100%;
  border-radius: 50%;
}   
/* ... */

